Muchas pruebas de graalvm, gradle, etc